# rainfall-forecasting-tsa

./: .gitignore  .gitlab-ci.yml  Containerfile  LICENSE  README.md  eda.ipynb  pyproject.toml  requirements.txt  run.sh
conf/: config.yaml  optuna.yaml  optuna_lstm.yaml  optuna_tcn.yaml
conf/model_cfg/: deepar.yaml  lstm.yaml  tcn.yaml
src/: __init__.py  api_client.py  data_loader.py  data_processor.py  evaluate.py  general_utils.py  model.py  model_factory.py  pipeline.py  predict.py  time_series_dataset.py  train.py
tests/: test_pipeline_components.py
